# sancus-core

./: .gitignore  LICENSE  Makefile.am  Makefile.am.sh  README  autogen.sh  configure.ac  index.html  sancus-core.pc.in  sancus-netlink.pc.in
doc/: Doxyfile.in  Makefile.am  Makefile.am.sh
include/: Makefile.am  Makefile.am.sh  sancus_alloc.h  sancus_buffer.h  sancus_common.h  sancus_fd.h  sancus_fmt.h  sancus_list.h  sancus_log.h  sancus_netlink.h  sancus_serial.h  sancus_socket.h  sancus_stream.h  sancus_tcp_conn.h  sancus_tcp_server.h
include/sancus/: alloc.h  bit.h  buffer.h  buffer_local.h  clock.h  common.h  ev.h  ev2.h  fd.h  list.h  logger.h  netlink.h  serial.h  socket.h  stream.h  string.h  tcp_conn.h  tcp_server.h  time.h  types.h
include/sancus/ev/: fd.h  watcher.h
src/: Makefile.am  Makefile.am.sh  alloc.c  buffer.c  clock.c  fd.c  fmt_cstr.c  log.c  logger.c  netlink_attr.c  netlink_io.c  netlink_message.c  netlink_msg.c  sancus_serial.c  stream.c  tcp_conn.c  tcp_server.c  time.c
src/netlink/: Makefile.am  Makefile.am.sh  netlink_attr.c  netlink_io.c  netlink_msg.c
src/sancus/: alloc.c  buffer.c  buffer_legacy.c  fd.c  fmt_cstr.c  logger.c  sancus_serial.c  stream.c  tcp_conn.c  tcp_server.c  time.c
src/sancus/ev/: epoll.c  fd.c  loop.c  private.h  watcher.c
src/tests/: ev.c  time.c  types.c
