nobase_include_HEADERS = \
	sancus/alloc.h \
	sancus/bit.h \
	sancus/buffer.h \
	sancus/common.h \
	sancus/ev.h \
	sancus/fd.h \
	sancus/fmt.h \
	sancus/list.h \
	sancus/serial.h \
	sancus/socket.h \
	sancus/stream.h \
	sancus/tcp_conn.h \
	sancus/tcp_server.h \
	sancus/time.h

if HAVE_LINUX_NETLINK
nobase_include_HEADERS += \
	sancus/netlink.h
endif
